Fix: Move images to public directory and update image paths for Vercel deployment

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="container">
         <div class="logo">
           <a href="index.html">
-            <img src="images/mosaic groove.png" alt="Mosaic Grove" />
+            <img src="/mosaic-grove-logo.png" alt="Mosaic Grove" />
             <span>Mosaic Grove</span>
           </a>
         </div>
@@ -108,7 +108,7 @@
           </div>
         </div>
         <div class="product-image">
-          <img src="images/tiger.jpg" alt="Cashews and Tiger Nuts" />
+          <img src="/tiger.jpg" alt="Cashews and Tiger Nuts" />
         </div>
       </div>
     </section>
@@ -184,7 +184,7 @@
           >
         </div>
         <div class="vision-image">
-          <img src="images/tigernutflour.jpg" alt="Our Founders" />
+          <img src="/tigernutflour.jpg" alt="Our Founders" />
         </div>
       </div>
     </section>
@@ -245,7 +245,7 @@
       <div class="container">
         <div class="footer-top">
           <div class="footer-logo">
-            <img src="images/mosaic groove.png" alt="Mosaic Grove" />
+            <img src="/mosaic-grove-logo.png" alt="Mosaic Grove" />
             <span>Mosaic Grove</span>
           </div>
           <div class="footer-nav">
