Fix: Simplified Vercel config and added public directory for images

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
             rgba(0, 0, 0, 0.5),
             rgba(0, 0, 0, 0.5)
           ),
-          url("images/contact-header.jpg");
+          url("/images/contact-header.jpg");
         background-size: cover;
         background-position: center;
         color: white;
@@ -279,7 +279,7 @@
       <div class="container">
         <div class="logo">
           <a href="index.html">
-            <img src="images/mosaic groove.png" alt="Mosaic Grove" />
+            <img src="/images/logo.svg" alt="Mosaic Grove" />
             <span>Mosaic Grove</span>
           </a>
         </div>
@@ -538,7 +538,7 @@
       <div class="container">
         <div class="footer-top">
           <div class="footer-logo">
-            <img src="images/logo.svg" alt="Mosaic Grove" />
+            <img src="/images/logo.svg" alt="Mosaic Grove" />
             <span>Mosaic Grove</span>
           </div>
           <div class="footer-nav">
