--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <!-- Announcement Banner -->
@@ -30,7 +30,7 @@
       <div class="container">
         <div class="logo">
           <a href="index.html">
-            <img src="/images/logo.svg" alt="Mosaic Grove" />
+            <img src="images/logo.svg" alt="Mosaic Grove" />
             <span>Mosaic Grove</span>
           </a>
         </div>
@@ -108,7 +108,7 @@
           </div>
         </div>
         <div class="product-image">
-          <img src="/images/tiger.jpg" alt="Cashews and Tiger Nuts" />
+          <img src="images/tiger.jpg" alt="Cashews and Tiger Nuts" />
         </div>
       </div>
     </section>
@@ -184,7 +184,7 @@
           >
         </div>
         <div class="vision-image">
-          <img src="/images/tigernutflour.jpg" alt="Our Founders" />
+          <img src="images/tigernutflour.jpg" alt="Our Founders" />
         </div>
       </div>
     </section>
@@ -245,7 +245,7 @@
       <div class="container">
         <div class="footer-top">
           <div class="footer-logo">
-            <img src="/images/logo.svg" alt="Mosaic Grove" />
+            <img src="images/logo.svg" alt="Mosaic Grove" />
             <span>Mosaic Grove</span>
           </div>
           <div class="footer-nav">
