--- a/products.html
+++ b/products.html
@@ -14,8 +14,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/css/products.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/products.css" />
     <style>
       /* Products page specific styles */
       .page-header {
@@ -432,7 +432,7 @@
       <div class="container">
         <div class="logo">
           <a href="index.html">
-            <img src="images/mosaic groove.png" alt="Mosaic Grove" />
+            <img src="images/logo.svg" alt="Mosaic Grove" />
             <span>Mosaic Grove</span>
           </a>
         </div>
