--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="0;url=../index.html">
-  <title>Redirecting...</title>
+  <title>Mosaic Grove | Good for you - and good for Ghana</title>
+  <script>
+    // Redirect to the root index.html only if we're in the /public/ path
+    if (window.location.pathname.includes('/public/')) {
+      window.location.href = '/';
+    }
+  </script>
 </head>
 <body>
-  <p>Redirecting to <a href="../index.html">homepage</a>...</p>
+  <!-- This is a copy of the main index.html content -->
+  <h1>Mosaic Grove</h1>
+  <p>Loading the site...</p>
 </body>
 </html> 
